--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,7 @@
 
     <EditText
         android:id="@+id/edtlogId"
+        android:inputType="textNoSuggestions"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
@@ -34,6 +35,7 @@
 
     <EditText
         android:id="@+id/edtLogPass"
+        android:inputType="textNoSuggestions"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
