--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,7 +42,7 @@
         android:hint="비밀번호를 입력해주세요." />
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/autoLog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
