메인 컬러 4가지 추가(orange,nave,grey1,2) 이외는 기존 컬러 사용
폰트 DMSerifDisplay(app_name),Noto Sans 5종(notosans)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#FFCACBD5</color>
+
+    <color name="point_orange">#ED5E0E</color>
+    <color name="navy">#4E5464</color>
+    <color name="grey1">#F8F8F8</color>
+    <color name="grey2">#E5E5E5</color>
 </resources>
