--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,17 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grey2"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="92dp"
+        android:layout_height="105dp"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center"
+
+        app:srcCompat="@drawable/logo_red" />
+
+    <TextView
+        android:id="@+id/AppName_login"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:fontFamily="@font/app_name"
+        android:textColor="@color/black"
+        android:textSize="25dp"
+        android:text="Pot, Folio" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/notosans_bold"
         android:text="아이디"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="18dp"
         android:textStyle="bold" />
 
@@ -41,14 +64,6 @@
         android:layout_marginLeft="30dp"
         android:hint="비밀번호를 입력해주세요." />
 
-    <CheckBox
-        android:id="@+id/autoLog"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:text="자동 로그인하기"
-        android:textSize="15dp"/>
-
     <Button
         android:id="@+id/btnLog"
         android:layout_width="350dp"
@@ -69,8 +84,6 @@
         android:text="회원가입하기"
         android:textSize="15dp"
         android:textStyle="bold" />
-
-
 
 
 </LinearLayout>
