이렇게 푸시하면 어떻게 되지?

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
-        android:hint="아이디를 입력해주세요." />
+        android:hint="ID" />
 
     <TextView
         android:layout_width="match_parent"
