--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,9 +48,9 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:background="@drawable/roundbutton_white"
-        android:hint="      Password"
         android:textSize="15dp"
         android:fontFamily="@font/notosans_medium"
+        android:hint="      Password"
         />
 
     <Button
@@ -93,11 +93,11 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="null"
             android:text="회원가입"
             android:textSize="15dp"
             android:fontFamily="@font/notosnas_black"
             android:textColor="@color/point_orange"
+            style="?android:borderlessButtonStyle"
             />
     </LinearLayout>
 
