로그인화면,회원가입화면 디자인완료
디자인 적용 완료.

edittext창 padding효과를 주어
어긋나지 않도록 수정

전체적으로 크기 및 레이아웃 수정

+)아직까지 렌더링 문제는 해결이 안됨. 하지만 실행하면 보이긴 해서 그거로 프로젝트 진행 중.. 5시간째 구글링해도 해결이 되지않음. 이부분은 30일 이내에 최대한 수정할 예정

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -13,7 +13,7 @@
         android:id="@+id/imageView8"
         android:layout_width="92dp"
         android:layout_height="105dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="100dp"
         android:layout_gravity="center"
 
         app:srcCompat="@drawable/logo_red" />
@@ -32,57 +32,64 @@
     <EditText
             android:id="@+id/edtName"
             android:inputType="textNoSuggestions"
+            android:paddingLeft="20dp"
             android:layout_width="245dp"
-            android:layout_height="35dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
-            android:layout_marginTop="100dp"
-            android:textSize="15dp"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/roundbutton_white"
+            android:textSize="12dp"
             android:fontFamily="@font/notosans_medium"
             android:hint="이름을 입력해주세요." />
 
         <EditText
             android:id="@+id/edtId"
             android:inputType="textNoSuggestions"
+            android:paddingLeft="20dp"
             android:layout_width="245dp"
-            android:layout_height="35dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:textSize="15dp"
+            android:background="@drawable/roundbutton_white"
+            android:textSize="12dp"
             android:fontFamily="@font/notosans_medium"
             android:hint="아이디를 입력해주세요." />
 
         <EditText
             android:id="@+id/edtPass"
             android:inputType="textNoSuggestions"
+            android:paddingLeft="20dp"
             android:layout_width="245dp"
-            android:layout_height="35dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:textSize="15dp"
+            android:background="@drawable/roundbutton_white"
+            android:textSize="12dp"
             android:fontFamily="@font/notosans_medium"
             android:hint="비밀번호를 입력해주세요." />
 
         <EditText
             android:id="@+id/edtRePass"
             android:inputType="textNoSuggestions"
+            android:paddingLeft="20dp"
             android:layout_width="245dp"
-            android:layout_height="35dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:textSize="15dp"
+            android:background="@drawable/roundbutton_white"
+            android:textSize="12dp"
             android:fontFamily="@font/notosans_medium"
             android:hint="비밀번호를 한 번 더 입력해주세요." />
 
         <Button
             android:id="@+id/btnSign"
             android:layout_width="245dp"
-            android:layout_height="35dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginTop="40dp"
             android:background="@drawable/roundbutton_navy"
-            android:backgroundTint="#45494A"
             android:fontFamily="@font/notosans_bold"
-            android:text="회원가입하기"
+            android:text="회원가입"
             android:textSize="15dp"
             android:textColor="@color/white" />
 
