--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,9 +11,8 @@
         android:id="@+id/imageView8"
         android:layout_width="92dp"
         android:layout_height="105dp"
-        android:layout_marginTop="50dp"
         android:layout_gravity="center"
-
+        android:layout_marginTop="100dp"
         app:srcCompat="@drawable/logo_red" />
 
     <TextView
@@ -30,12 +29,13 @@
     <EditText
         android:id="@+id/edtlogId"
         android:inputType="textNoSuggestions"
+        android:paddingLeft="20dp"
         android:layout_width="245dp"
         android:layout_height="35dp"
         android:layout_gravity="center"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/roundbutton_white"
-        android:hint="      ID"
+        android:hint="ID"
         android:textSize="15dp"
         android:fontFamily="@font/notosans_medium"
         />
@@ -43,6 +43,7 @@
     <EditText
         android:id="@+id/edtLogPass"
         android:inputType="textNoSuggestions"
+        android:paddingLeft="20dp"
         android:layout_width="245dp"
         android:layout_height="35dp"
         android:layout_gravity="center"
@@ -50,7 +51,7 @@
         android:background="@drawable/roundbutton_white"
         android:textSize="15dp"
         android:fontFamily="@font/notosans_medium"
-        android:hint="      Password"
+        android:hint="Password"
         />
 
     <Button
@@ -70,12 +71,13 @@
 
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <LinearLayout android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/grey2"
         android:orientation="horizontal"
         android:gravity="center">
+
+
 
         <TextView
             android:id="@+id/textView8"
@@ -100,5 +102,4 @@
             style="?android:borderlessButtonStyle"
             />
     </LinearLayout>
-
 </LinearLayout>
